@@ -1,0 +1,29 @@
+BESTFIT		bestfit		NULL
+BOOKMARK	bookmark	bookmark_add
+BOOKMARKS       NULL		bookmark
+FBACKWARD	fbackward	2leftarrow
+FFORWARD	fforward	2rightarrow
+FITHEIGHT	fitheight	view_fit_height
+FITWIDTH	fitwidth	view_fit_height
+INFO		info		info
+JAPANESE	japanese	NULL
+NEXTPAGE	nextpage	1rightarrow
+OPENARCH	openarch	fileopen
+OPENDIR		opendir		NULL
+ORGSIZE		orgsize		view_remove
+PAGEBOTTOM	pagebottom	bottom
+PAGETOP		pagetop		top
+PREVPAGE	prevpage	1leftarrow
+QCOMICBOOK	qcomicbook	qcomicbook
+RLEFT		rleft		rotate_ccw
+RRIGHT		rright		rotate_cw
+SETTINGS	settings	configure
+THUMBNAILS	thumbnails	show_side_panel
+TWOPAGES	twopages	view_left_right
+WHOLEPAGE	wholepage	view_fit_window
+CLOSE		NULL		fileclose
+QUIT            NULL            exit
+JUMPTO          NULL            goto
+FULLSCREEN      NULL            window_fullscreen
+NOFULLSCREEN    NULL		window_nofullscreen
+
