@@ -13,28 +13,34 @@
 #ifndef __CBICONS_H
 #define __CBICONS_H
 
-#define ICON_APPICON    "qcomicbook.png"
-#define ICON_OPENDIR    "opendir.png"
-#define ICON_OPENARCH   "openarch.png"
-#define ICON_FITWIDTH   "fitwidth.png"
-#define ICON_FITHEIGHT  "fitheight.png"
-#define ICON_WHOLEPAGE  "wholepage.png"
-#define ICON_ORGSIZE    "orgsize.png"
-#define ICON_BESTFIT    "bestfit.png"
-#define ICON_PAGEBOTTOM "pagebottom.png"
-#define ICON_PAGETOP    "pagetop.png"
-#define ICON_NEXTPAGE   "nextpage.png"
-#define ICON_PREVPAGE   "prevpage.png"
-#define ICON_FORWARD    "fforward.png"
-#define ICON_BACKWARD   "fbackward.png"
-#define ICON_INFO       "info.png"
-#define ICON_THUMBNAILS "thumbnails.png"
-#define ICON_TWOPAGES   "twopages.png"
-#define ICON_JAPANESE   "japanese.png"
-#define ICON_ROTRIGHT   "rright.png"
-#define ICON_ROTLEFT    "rleft.png"
-#define ICON_BOOKMARK   "bookmark.png"
-#define ICON_SETTINGS   "settings.png"
+#define ICON_APPICON    "APPICON"
+#define ICON_OPENDIR    "OPENDIR"
+#define ICON_OPENARCH   "OPENARCH"
+#define ICON_FITWIDTH   "FITWIDTH"
+#define ICON_FITHEIGHT  "FITHEIGHT"
+#define ICON_WHOLEPAGE  "WHOLEPAGE"
+#define ICON_ORGSIZE    "ORGSIZE"
+#define ICON_BESTFIT    "BESTFIT"
+#define ICON_PAGEBOTTOM "PAGEBOTTOM"
+#define ICON_PAGETOP    "PAGETOP"
+#define ICON_NEXTPAGE   "NEXTPAGE"
+#define ICON_PREVPAGE   "PREVPAGE"
+#define ICON_FORWARD    "FFORWARD"
+#define ICON_BACKWARD   "FBACKWARD"
+#define ICON_INFO       "INFO"
+#define ICON_THUMBNAILS "THUMBNAILS"
+#define ICON_TWOPAGES   "TWOPAGES"
+#define ICON_JAPANESE   "JAPANESE"
+#define ICON_ROTRIGHT   "RRIGHT"
+#define ICON_ROTLEFT    "RLEFT"
+#define ICON_BOOKMARK   "BOOKMARK"
+#define ICON_BOOKMARKS  "BOOKMARKS"
+#define ICON_SETTINGS   "SETTINGS"
+#define ICON_CLOSE      "CLOSE"
+#define ICON_QUIT       "QUIT"
+#define ICON_JUMPTO     "JUMPTO"
+#define ICON_FULLSCREEN "FULLSCREEN"
+#define ICON_NOFULLSCREEN "NOFULLSCREEN"
 
 #endif
 
